--- a/backend/src/tests.ipynb
+++ b/backend/src/tests.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "from backend.db.models import IndicatorDimension, IndicatorPeriod, IndicatorRecord\n",
     "\n",
-    "from sqlalchemy import desc, func, select"
+    "from sqlalchemy import desc, func, select, delete"
    ]
   },
   {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -54,6 +54,64 @@
     "\n",
     "query = select(subquery.c.content).order_by(desc(subquery.c.count)).limit(50)\n",
     "print(query)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Delete old records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DELETE FROM indicator_record WHERE indicator_record.period_id IN (SELECT indicator_period.id \n",
+      "FROM indicator_period \n",
+      "WHERE indicator_period.timestamp < :timestamp_1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_ts = 12\n",
+    "query = delete(IndicatorRecord).where(IndicatorRecord.period_id.in_( select(IndicatorPeriod.id).where(IndicatorPeriod.timestamp < min_ts)))\n",
+    "print(query)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Delete dimensions not used anymore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DELETE FROM indicator_dimension WHERE indicator_dimension.id IN (SELECT DISTINCT indicator_record.dimension_id \n",
+      "FROM indicator_record)\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = delete(IndicatorDimension).where(\n",
+    "                IndicatorDimension.id.in_(select(IndicatorRecord.dimension_id).distinct())\n",
+    "            )\n",
+    "print(query)"
    ]
   }
  ],
