--- a/dev/tests.ipynb
+++ b/dev/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from backend.db.models import IndicatorDimension, IndicatorPeriod, IndicatorRecord\n",
+    "from offspot_metrics_backend.db.models import IndicatorDimension, IndicatorPeriod, IndicatorRecord\n",
     "\n",
     "from sqlalchemy import desc, func, select, delete"
    ]
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
      "text": [
       "SELECT content_with_count.content \n",
       "FROM (SELECT indicator_dimension.value0 AS content, sum(indicator_record.value) AS count \n",
-      "FROM indicator_dimension JOIN indicator_record ON indicator_dimension.id = indicator_record.dimension_id JOIN indicator_period ON indicator_period.id = indicator_record.period_id \n",
+      "FROM indicator_dimension JOIN indicator_record ON indicator_dimension.id = indicator_record.dimension_id JOIN indicator_period ON indicator_period.timestamp = indicator_record.period_id \n",
       "WHERE indicator_period.timestamp >= :timestamp_1 AND indicator_period.timestamp <= :timestamp_2 GROUP BY content) AS content_with_count ORDER BY content_with_count.count DESC\n",
       " LIMIT :param_1\n"
      ]
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DELETE FROM indicator_record WHERE indicator_record.period_id IN (SELECT indicator_period.id \n",
+      "DELETE FROM indicator_record WHERE indicator_record.period_id IN (SELECT indicator_period.timestamp \n",
       "FROM indicator_period \n",
       "WHERE indicator_period.timestamp < :timestamp_1)\n"
      ]
@@ -93,7 +93,7 @@
    ],
    "source": [
     "min_ts = 12\n",
-    "query = delete(IndicatorRecord).where(IndicatorRecord.period_id.in_( select(IndicatorPeriod.id).where(IndicatorPeriod.timestamp < min_ts)))\n",
+    "query = delete(IndicatorRecord).where(IndicatorRecord.period_id.in_( select(IndicatorPeriod.timestamp).where(IndicatorPeriod.timestamp < min_ts)))\n",
     "print(query)"
    ]
   },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
